mysql-@DEB_PRODUCTNAME@@DEB_PRODUCTSERIES@ (@DEB_SERVERVERSION@@DEB_PLATFORMRELEASE@) @DEB_CODENAME@; urgency=low

  * Integrate the provisional 5.7.11 changes for Ubuntu 16.04 "Xenial Xerus"
    ("packaging/deb-in/" from Oracle's 5.7.14,
    adapted to Codership's "mysql-wsrep" needs,
    SysV init files replaced by systemd files)
    with 5.7.15, to support both 16.04 LTS "Xenial Xerus" and 14.04 LTS "Trusty Tahr".

 -- Jörg Brühe <joerg.bruehe@fromdual.com>  Tue, 01 Nov 2016 09:45:42 +0100

mysql-@DEB_PRODUCTNAME@ (@DEB_SERVERVERSION@@DEB_PLATFORMRELEASE@) @DEB_CODENAME@; urgency=low

  [ Akhil Mohan ]
  * new upstream release
  * Added new libtest_* plugins to source/include-binaries, mysql-*-test.install
  * added new plugin to source/include-binaries, mysql-*-test.install
    libtest_framework
    libtest_services
    libtest_services_threaded
    locking_service
    test_security_context
    version_token
  * added support for MECAB in
    d/{control,rules,mysql-*-server.install,source/include-binaries}
    (Closes: #20315007)
  * added automatic setup of ssl certs in
    d/mysql-*-server.mysql.init
    d/extra/mysql-systemd-start
    (Closes: #20650118)
  * removed pkg mysql-*-bench; sqlbench will not be packaged
    (Closes: #21303289)
  * removed cleanup statement for client lib symlinks *_r in d/rules
    (Closes: #21311067)

  [ Balasubramanian Kandasamy ]
  * Added mysqlpump man page to d/mysql-*-client.install
  * Added new decompression utilities lz4_decompress and zlib_decompress
    binaries.
  * Added mysqlx plugin

  [ Lars Tangvald ]
  * Added keyring directory and plugin

 -- Balasubramanian Kandasamy <balasubramanian.kandasamy@oracle.com>  Wed, 26 Aug 2015 15:20:12 +0530

mysql-@DEB_PRODUCTNAME@ (5.7.7-rc-3ubuntu15.04) vivid; urgency=low

  * new upstream release
  * forked packaging source from utopic to vivid
  * updated Standards-Version to 3.9.6 in d/control
  * apparmor profile updated to allow read on all files under /etc/mysql